[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = "Local Python package entrypoint to help create e2e tests for the Expense Tracker app"
authors = ["Alexus Wong <awong@aledade.com>"]
packages = [
    { include = "utilities", from = "lib" },
]


[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
utilities = 'utilities.cli:main'